Bug 962629 - Respect max texture size when creating Gralloc textures. r=nical

Add a size hint parameter to CreateTextureClientForDrawing, and use said
parameter to not create Gralloc surfaces that are bigger than the maximum
texture size.